<resources>

    <string name="app_name">Content Providers</string>
    <string name="addcontact">Add Contact</string>
    <string name="contactnew">New Contact</string>
    <string name="showcontact">Show Contacts</string>
    <string name="nametxt">Name:</string>
    <string name="emailtxt">Email:</string>
    <string name="officetxt">Home/Office:</string>
    <string name="phonetxt">Phone:</string>
    <string name="nameedt"> Enter Name</string>
    <string name="emailedt"> Enter Email</string>
    <string name="officeedt"> Enter Home/Office</string>
    <string name="phoneedt">Enter Phone</string>
    <string name="error">Should Enter Atleast One Field</string>

</resources>